# CG-Scratch

./: .gitignore  CG_Scratch.cbp  CG_Scratch.depend  CG_Scratch.layout  CG_Scratch_VS.sln  CG_Scratch_VS.vcxproj  CG_Scratch_VS.vcxproj.filters  CMakeLists.txt  Computer Graphics from scratch  FinalImage.ppm  README.md  Raster.ppm  main.cpp  math.h  output.ppm
Debug/: CG_Scratch_VS.exe.recipe  CG_Scratch_VS.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/CG_Scratch_VS.tlog/: CG_Scratch_VS.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Headers/: Camera.h  Canvas.h  Light.h  Ray.h  Scene.h  Sphere.h  custom_math.h  math.h  shapes.h
SourceFiles/: Camera.cpp  Canvas.cpp  Old.h  Ray.cpp  Scene.cpp  main.cpp
